<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="true">Soil</string>
    <string name="log_in" translatable="true">LOG IN</string>
    <string name="sign_up" translatable="true">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="password_help">Your password must be of 8\-20 characters,\n and must include one letter and one number. </string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create an account</string>
    <string name="go_back">Go Back</string>
    <string name="sign_in" translatable="true">Sign in</string>
    <string name="soil_Logo" translatable="true">Soil Logo</string>
    <string name="login_email" translatable="true">Enter Email</string>
    <string name="password" translatable="true">Enter Password</string>
    <string name="remember_me" translatable="true">Remember Me</string>
    <string name="forgot_your_password" translatable="true">Forgot your password?</string>
    <string name="settings_button">Settings</string>
    <string name="back_button">Back Button</string>
    <string name="back">back</string>
    <string name="account">Account</string>
    <string name="privacy">Privacy &amp; Security</string>
    <string name="support">Help &amp; Support</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="don_t_show_this_message_again">Don\'t show this message again</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Duis gravida nulla vitae malesuada cursus. Fusce feugiat risus nulla, et luctus sapien sagittis at.Donec eget viverra massa, sit amet efficitur neque. Donec massa ipsum, vulputate ac sollicitudin ut, rutrum ut turpis.Fusce hendrerit, erat id hendrerit pulvinar, tortor quam mollis diam, nec commodo diam orci in odio.
        </string>
    <string name="plant_page_button">Plant page</string>
    <string name="about">About</string>
    <string name="videos">Videos</string>
    <string name="plants">Plants</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="nav_text">The rapid shift to remote teaching and learning necessitated by the global COVID19 pandemic exposed areas of significant need in VET schools, especially in those who are targeting students with disabilities and fewer opportunities. It has underscored previously unknown or poorly understood gaps in equity, access, tools, and infrastructure but as well in the VET educators of this underrepresented group.</string>
    <string name="delete_models">Delete Models</string>
    <string name="item_name">Item Name</string>
    <string name="forward_arrow">Forward Arrow</string>
    <string name="settings_item_image">Settings Item Image</string>
    <string name="hide_show_toggle">hide/show toggle</string>
    <string name="welcome_text">Welcome %1$s !</string>
    <string name="forward_five">forward_five</string>
    <string name="pause">pause</string>
    <string name="play">play</string>
    <string name="slash_character">/</string>
    <string name="skip_next">skip next</string>
    <string name="fullscreen_toggle">fullscreen toggle</string>
    <string name="go_previous">go previous</string>
    <string name="time_bar">time bar</string>
    <string name="eu_image">euImage</string>
    <string name="erasmus_image">erasmusImage</string>
    <string name="open_menu">open menu</string>
    <string name="open_camera">open camera</string>
    <string name="plant_description">Plant Description</string>
    <string name="open_close_toggle">open/close toggle</string>
    <string name="plant_name">Plant Name</string>
    <string name="open_video_list">open video list</string>
    <string name="open_plant_page">open plant page</string>
    <string name="open_settings_page">open settings page</string>
    <string name="open_about_page">open About page</string>
    <string name="delete">Delete</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset">Reset</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string-array name="settings_items">

        <item>Account</item>
        <item>Privacy and Security</item>
        <item>Delete Account</item>
        <item>Log Out</item>

    </string-array>
    <string-array name="plant_name_array">

        <item> Pumpkin </item>
        <item> Radish </item>
        <item> Carrot </item>
        <item> Broccoli </item>

        <item> Onion </item>
        <item> Cauliflower </item>
        <item> Fir tree </item>
        <item> Pine tree </item>

        <item> Nettle </item>
        <item> Zucchini </item>
        <item> Pepper </item>
        <item> Tomatoes </item>

    </string-array>
    <string-array name="plant_description_array">

        <item>Pumpkin Description</item>
        <item>"Radishes Description"</item>
        <item>Carrot Description</item>
        <item>"Broccoli Description"</item>

        <item>"Onion Description"</item>
        <item>"Cauliflower Description"</item>
        <item>"Fir tree Description"</item>
        <item>"Pine tree Description"</item>

        <item>"Nettle Description"</item>
        <item>Zucchini Description</item>
        <item>Pepper plant Description</item>
        <item>Tomato Description</item>

    </string-array>
    <string-array name="menu_items">

        <item>Videos</item>
        <item>Plants</item>
        <item>Settings</item>
        <item>About</item>

    </string-array>
    <string-array name="video_categories">

        <item>Watering</item>
        <item>Digging, Planting and Sowing</item>
        <item>Pruning and Clipping</item>
        <item>Weeding and Mulching</item>
        <item>Flower Picking and Arranging</item>

        <item>Crafts Activities Using Materials from the Garden</item>
        <item>Harvesting Garden Produce</item>
        <item>Cooking Food from the Garden</item>
        <item>Special Needs Gardening</item>
        <item>Sensory Gardens</item>

        <item>Theme Gardens</item>
        <item>Plant Selection</item>
        <item>Gardening Skills for People with Disabilities</item>
        <item>Making a Garden Easy to Use for People with Disabilities</item>
        <item>Gardening Equipment for People with Disabilities</item>

        <item>Garden Activities with People with Disabilities</item>
        <item>What is Therapeutic Horticulture</item>
        <item>Therapy and Rehabilitation</item>

    </string-array>
    <string-array name="watering_uri">
        <item> https://drive.google.com/uc?id=1gF7yZZW8LsCntiVOQ_C6EeeSAE4YUzpA&amp;authuser=0</item>
        <item> https://drive.google.com/uc?id=1Qb-6k9OuQY7mH4B_mOabA3yqnDuZLKoI&amp;authuser=0</item>
        <item> https://drive.google.com/uc?id=1rKaYhX0p2aoWnDPCkuUnwoaiDNiZifXR&amp;authuser=0</item>

        <item> https://drive.google.com/uc?id=1RIJ5qdBEssjl4ZT8jPD83khlh44Pxjcm&amp;authuser=0</item>
        <item tools:ignore="Typos"> https://drive.google.com/uc?id=1tl-SNIt3_5VQSl1X4D5T9efxWUHZvH6J&amp;authuser=0</item>
        <item> https://drive.google.com/uc?id=1dn6G6rQ9vXt-ut5FtybnaWrxOy0PtPBP&amp;authuser=0</item>
        <item> https://drive.google.com/uc?id=1wLUU_TRxa7i0knO2GnMIoVA2DSIBQ53Q&amp;authuser=0</item>

    </string-array>
    <string-array name="watering_names">

        <item> What is Irrigation </item>
        <item> Ways of Irrigation </item>
        <item> Drip Irrigation </item>

        <item> Irrigation with Artificial Rain </item>
        <item> Subsurface Irrigation </item>
        <item> Surface Irrigation </item>
        <item> Watering </item>

    </string-array>
    <string-array name="planting_uri">

        <item> https://drive.google.com/uc?id=1ANxH7RZNnShJ5ZhmtYR87H_ti7dmBgPV&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=17Dhl-WbhZsSjzPtR6gi-s30TjcKGmoYs&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=173JTuzxVQTFUA_EwPRSPMqZS1t2kNKaI&amp;authuser=0 </item>

        <item> https://drive.google.com/uc?id=1uSFG2fRXCX_qT_Bl8nHliQFkM8SMi9Ik&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=1RSMb14HzIh3j31ccvtPyfKQjoC2lCrfb&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=1EnfRQE3yNkvfE0hp2vwhVgmzPpzChpJy&amp;authuser=0 </item>
        <item tools:ignore="Typos"> https://drive.google.com/uc?id=1qxEv6Jh-kVQ3koIgIYv1OwmdpwjMu7Bl&amp;authuser=0 </item>

    </string-array>
    <string-array name="planting_names">

        <item> How to Dig a Hole (Part 1) </item>
        <item> How to Dig a Hole (Part 2) </item>
        <item> Planting (Part 1) </item>

        <item> Planting (Part 2) </item>
        <item> Planting (Part 3) </item>
        <item> Sowing (Part 1) </item>
        <item> Sowing (Part 2) </item>

    </string-array>
    <string-array name="pruning_uri">

        <item> https://drive.google.com/uc?id=17sQAjhMTRCyNWO9RUKeuMUgUAdmHF6KX&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=1CGzQwLBdHtXUMz-39A_mxl3h4VaLhGR2&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=1wBAlmwePD4PbhlEUrLSLyuq_gtPp4BwU&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=1G4sHT1ksXFWHRvakzEb-Zk_FvONx9ztO&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=1NxMB0Y0LFMi52Ext2nfJJ6E2Wney4vF5&amp;authuser=0 </item>

    </string-array>
    <string-array name="pruning_names">

        <item> Pruning rules </item>
        <item> Pruning </item>
        <item> Clipping (Part 1) </item>
        <item> Clipping (Part 2) </item>
        <item> Clipping (Part 3) </item>

    </string-array>
    <string-array name="mulching_uri">

        <item tools:ignore="Typos"> https://drive.google.com/uc?id=1hv8YYEsV4v0UVCT1H758jxidZFah3Zcb&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=1zovf8pOpGawpqevpoykEnSfj3IrnNePx&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=1BZhoIpMDHm55GN5OVO0nlO-y6lGs71Qi&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=1iu2F2ZpZy_z2IEmcN3LzxpkRlm15zb0v&amp;authuser=0 </item>
        <item tools:ignore="Typos"> https://drive.google.com/uc?id=1zHbXExuk93Torc1ZH8JCbCgM9RX9CTc4&amp;authuser=0 </item>

        <item> https://drive.google.com/uc?id=1P9CNcnTwnfRQCHoPdATucyI0dJmED67f&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=18kSfQCho9g5mUBwKD_sKkBYTdHhUkYKY&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=1BjwP9p5NVHXm4U30hMIQWT_WrLA8mWPM&amp;authuser=0 </item>
        <item> https://drive.google.com/uc?id=173fUPF5j7jBmprLmYy6FhJaQ8OhKx4v3&amp;authuser=0 </item>

    </string-array>
    <string-array name="mulching_names">

        <item> Weeding and Mulching </item>
        <item> Best Time for Weeding a Garden </item>
        <item> How Often Should You Weed a Garden </item>
        <item> How to Weed the Garden Properly </item>
        <item> Mulch itself is any material </item>

        <item> To mulch, follow these steps Part 1 </item>
        <item> To mulch, follow these steps Part 2 </item>
        <item> To mulch, follow these steps Part 3 </item>
        <item> Why Mulch </item>

    </string-array>
</resources>