<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about"
            />

        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/baseline_video_library_24"
            android:title="@string/videos"/>

        <item
            android:id="@+id/nav_plants"
            android:icon="@drawable/baseline_filter_vintage_24"
            android:title="@string/plants"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"/>


    </group>
</menu>