<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/previousButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_skip_previous_24"
        android:contentDescription="@string/go_previous"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_play_arrow_24"
        android:contentDescription="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pauseButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_pause_24"
        android:contentDescription="@string/pause"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_skip_next_24"
        android:contentDescription="@string/skip_next"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/playButton" />

    <TextView
        android:id="@+id/exoPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/exoPlayerBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/slashCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash_character"
        android:textColor="#CBCDC8"
        app:layout_constraintBottom_toTopOf="@+id/exoPlayerBar"
        app:layout_constraintStart_toEndOf="@+id/exoPosition" />

    <TextView
        android:id="@+id/exoDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#CBCDC8"
        app:layout_constraintBottom_toTopOf="@+id/exoPlayerBar"
        app:layout_constraintStart_toEndOf="@+id/slashCharacter" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fullscreenButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"

        android:layout_marginBottom="5dp"
        android:background="@drawable/round_fullscreen_24"
        android:contentDescription="@string/fullscreen_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.media3.ui.DefaultTimeBar
        android:id="@+id/exoPlayerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/time_bar"
        app:buffered_color="#95989F"
        app:layout_constraintBottom_toTopOf="@+id/fullscreenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:played_color="#FF0000"
        app:scrubber_color="#FF0000"
        app:unplayed_color="#45424E" />

</androidx.constraintlayout.widget.ConstraintLayout>