<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_2">

    <Button
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/soilLogo"
        android:layout_width="190dp"
        android:layout_height="140dp"
        android:contentDescription="@string/soil_Logo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/soil_logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/soilLogo"
        app:layout_constraintStart_toStartOf="@+id/soilLogo"
        app:layout_constraintTop_toBottomOf="@+id/soilLogo"
        app:layout_constraintVertical_bias="0.17">


        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"

            android:text="@string/sign_in"
            android:textSize="24sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="320dp"
            android:layout_height="53dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="emailAddress"

            android:background="@drawable/data_bg"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:padding="6dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/loginText"
            app:layout_constraintTop_toBottomOf="@+id/loginText" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="320dp"
            android:layout_height="53dp"
            android:layout_marginTop="24dp"
            android:autofillHints="password"

            android:background="@drawable/data_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="6dp"

            app:layout_constraintEnd_toEndOf="@+id/loginEmail"
            app:layout_constraintStart_toStartOf="@+id/loginEmail"
            app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

        <ImageView
            android:id="@+id/passwordToggle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/hide_show_toggle"
            android:padding="13dp"

            app:layout_constraintBottom_toBottomOf="@+id/loginPassword"
            app:layout_constraintEnd_toEndOf="@+id/loginPassword"
            app:layout_constraintTop_toTopOf="@+id/loginPassword" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"

            android:background="@drawable/button_bg"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textSize="29sp"

            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="@+id/loginPassword"
            app:layout_constraintStart_toStartOf="@+id/loginPassword"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword"
            app:layout_constraintHorizontal_bias="0.612" />

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:background="#00000000"

            android:text="@string/forgot_your_password"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.0" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>