<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    android:fillViewport="true"
    android:overScrollMode="never"
    tools:context=".sign_up_page"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="280dp"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/soil_Logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/soil_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/signup_name"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="320sp"
            android:layout_height="50sp"
            android:layout_marginTop="76dp"
            android:background="@drawable/data_bg"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/signup_lastname"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/data_bg"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/signup_name"
            app:layout_constraintStart_toStartOf="@+id/signup_name"
            app:layout_constraintTop_toBottomOf="@+id/signup_name" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/data_bg"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/signup_lastname"
            app:layout_constraintStart_toStartOf="@+id/signup_lastname"
            app:layout_constraintTop_toBottomOf="@+id/signup_lastname" />

        <EditText
            android:id="@+id/signup_phone"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/data_bg"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/signup_email"
            app:layout_constraintStart_toStartOf="@+id/signup_email"
            app:layout_constraintTop_toBottomOf="@+id/signup_email" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/password_help"
            android:textAlignment="center"
            android:textColor="@color/material_dynamic_neutral50"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/signup_phone"
            app:layout_constraintStart_toStartOf="@+id/signup_phone"
            app:layout_constraintTop_toBottomOf="@+id/signup_phone" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/data_bg"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/signup_confirm"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/data_bg"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/signup_password"
            app:layout_constraintStart_toStartOf="@+id/signup_password"
            app:layout_constraintTop_toBottomOf="@+id/signup_password" />

        <Button
            android:id="@+id/create_account"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_bg"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="@+id/signup_confirm"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/signup_confirm"
            app:layout_constraintTop_toBottomOf="@+id/signup_confirm" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#00000000"
            android:text="Go Back "
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/create_account"
            app:layout_constraintStart_toStartOf="@+id/create_account"
            app:layout_constraintTop_toBottomOf="@+id/create_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView >